--- a/themes/cayman-hugo-theme/layouts/partials/footer.html
+++ b/themes/cayman-hugo-theme/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" style="text-align: center;">
   <span class="site-footer-credits">
     {{ $.Site.Params.footer | markdownify }}
   </span>
