--- a/themes/cayman-hugo-theme/layouts/_default/single.html
+++ b/themes/cayman-hugo-theme/layouts/_default/single.html
@@ -1,6 +1,22 @@
 {{ define "main" }}
-  <h1 style="text-align: center">
-    <span style="border-bottom: 3px solid #2ebf91;">{{ .Title }}</span>
-  </h1>
+  <h1>{{ .Title }}</h1>
+  <div>
+    {{ $dateFormat := $.Site.Params.dateFormat | default "Jan 2, 2006" }}
+    <strong>Publish date: </strong>{{ .PublishDate.Format $dateFormat }}
+  </div>
+  {{ $tags := slice }}
+  {{ with .Params.tags }}
+    <div>
+      <strong>Tags: </strong>
+      {{ range . }}
+        {{ $href := print ("tags/" | absLangURL) (. | urlize) "/" }}
+        {{ $element := printf "<a href=\"%s\">%s</a>" $href . }}
+        {{ $tags = $tags | append $element }}
+      {{ end }}
+      {{ delimit $tags ", " }}
+    </div>
+  {{ end }}
   {{ .Content }}
+  {{ partial "disqus.html" . }}
+  {{ partial "gitalk.html" . }}
 {{ end }}
