--- a/themes/cayman-hugo-theme/layouts/_default/single.html
+++ b/themes/cayman-hugo-theme/layouts/_default/single.html
@@ -1,20 +1,24 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  <div>
-    {{ $dateFormat := $.Site.Params.dateFormat | default "Jan 2, 2006" }}
-    <strong>Publish date: </strong>{{ .PublishDate.Format $dateFormat }}
-  </div>
-  {{ $tags := slice }}
-  {{ with .Params.tags }}
-    <div>
-      <strong>Tags: </strong>
-      {{ range . }}
-        {{ $href := print ("tags/" | absLangURL) (. | urlize) "/" }}
-        {{ $element := printf "<a href=\"%s\">%s</a>" $href . }}
-        {{ $tags = $tags | append $element }}
-      {{ end }}
-      {{ delimit $tags ", " }}
-    </div>
+  <h1 style="text-align: center;">
+    <span style="border-bottom: 2px solid #efe;">{{ .Title }}</span>
+  </h1>
+  <p style="text-align: center; font-size: 16px">
+    <span style="font-style: italic;">
+      {{ $dateFormat := $.Site.Params.dateFormat | default "Jan 2, 2006" }}
+      {{ .PublishDate.Format $dateFormat }}
+    </span>
+    |
+    {{ $tags := slice }}
+    {{ with .Params.tags }}
+      <span class="diy-tag-a">
+        {{ range . }}
+          {{ $href := print ("tags/" | absLangURL) (. | urlize) "/" }}
+          {{ $element := printf "<span><a href=\"%s\">%s</a></span>" $href . }}
+          {{ $tags = $tags | append $element }}
+        {{ end }}
+        {{ delimit $tags " " }}
+      </span>
+    </p>
   {{ end }}
   {{ .Content }}
   {{ partial "disqus.html" . }}
