--- a/themes/cayman-hugo-theme/layouts/partials/head.html
+++ b/themes/cayman-hugo-theme/layouts/partials/head.html
@@ -16,5 +16,6 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   {{ partial "katex.html" . }}
-  <title>{{ .Title }} | {{ $.Site.Title }}</title>
+  <!-- <title>{{ .Title }} | {{ $.Site.Title }}</title> -->
+  <title>{{ $.Site.Title }}</title>
 </head>
