--- a/themes/cayman-hugo-theme/layouts/partials/head.html
+++ b/themes/cayman-hugo-theme/layouts/partials/head.html
@@ -17,5 +17,5 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   {{ partial "katex.html" . }}
   <!-- <title>{{ .Title }} | {{ $.Site.Title }}</title> -->
-  <title>{{ $.Site.Title }}</title>
+  <title>{{ .Title }}</title>
 </head>
