highlight code config

--- a/themes/cayman-hugo-theme/layouts/_default/single.html
+++ b/themes/cayman-hugo-theme/layouts/_default/single.html
@@ -23,4 +23,5 @@
   {{ .Content }}
   {{ partial "disqus.html" . }}
   {{ partial "gitalk.html" . }}
+  <script>hljs.initHighlightingOnLoad()</script>
 {{ end }}
