--- a/themes/cayman-hugo-theme/layouts/partials/head.html
+++ b/themes/cayman-hugo-theme/layouts/partials/head.html
@@ -9,6 +9,8 @@
   {{ $options := (dict "targetPath" "css/cayman.css") }}
   {{ $caymanCss := resources.Get $caymanScss | resources.ExecuteAsTemplate $caymanScss . | toCSS $options | fingerprint }}
   <link rel="stylesheet" href="{{ $caymanCss.Permalink }}">
+  <link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/github-gist.min.css" rel="stylesheet">
+  <script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
   <!-- Icon made by Freepik, from Flaticon, licensed by CC 3.0. -->
   <!-- https://www.flaticon.com/free-icon/island_1530732 -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
