--- a/themes/cayman-hugo-theme/assets/scss/cayman.scss
+++ b/themes/cayman-hugo-theme/assets/scss/cayman.scss
@@ -367,3 +367,42 @@ a {
 .diy-tag-a > span > a {
   text-decoration: underline;
 }
+
+.diy-info, .diy-warning, .diy-danger {
+  padding: 10px;
+  margin: 10px auto;
+  border-radius: 4px;
+}
+
+.diy-info {
+  border: 1px solid #c2d2b5;
+  background: #edf9e8;
+  &::before {
+    content: "ℹ️"
+  }
+}
+
+.diy-warning {
+  border: 1px solid #e0d1b1;
+  background: #fffbe6;
+  &::before {
+    content: "⚠️"
+  }
+}
+
+.diy-danger {
+  border: 1px solid #deb8be;
+  background: #fff3f3;
+  &::before {
+    content: "🚒"
+  }
+}
+
+div.highlight pre code .hljs-comment {
+  font-style: normal;
+  font-size: 14px;
+}
+
+div.highlight table > tbody > tr > td:nth-child(2) {
+  width: 100%;
+}
