--- a/themes/cayman-hugo-theme/assets/scss/cayman.scss
+++ b/themes/cayman-hugo-theme/assets/scss/cayman.scss
@@ -377,25 +377,25 @@ a {
 .diy-info {
   border: 1px solid #c2d2b5;
   background: #edf9e8;
-  &::before {
-    content: "ℹ️"
-  }
+  // &::before {
+  //   content: "ℹ️"
+  // }
 }
 
 .diy-warning {
   border: 1px solid #e0d1b1;
   background: #fffbe6;
-  &::before {
-    content: "⚠️"
-  }
+  // &::before {
+  //   content: "⚠️"
+  // }
 }
 
 .diy-danger {
   border: 1px solid #deb8be;
   background: #fff3f3;
-  &::before {
-    content: "🚒"
-  }
+  // &::before {
+  //   content: "🚒"
+  // }
 }
 
 div.highlight pre code .hljs-comment {
